# observer-kit

./: .no-mistakes.yaml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.claude/: settings.json
.claude/hooks/: observer-opt-out.py
.claude/skills/observer-flow/: SKILL.md
.claude/skills/observer-flow/agents/: openai.yaml
.claude/skills/observer-flow/examples/: website-qualification.flow.json
.claude/skills/observer-flow/references/: cookbook-contract.md  flow-contract.md
.claude/skills/observer-flow/scripts/: validate_flow.py
.claude/skills/observer-kit/: SKILL.md
.claude/skills/observer-kit/references/: pattern.md
docs/: audit-panel.md  install-matrix.md
examples/: example_worker.py
examples/observer-flow-demo/: README.md  batch_flow_coordinator.py  demo_runtime.py  flow_coordinator.py  test_flow_coordinator.py
observer_kit/: __init__.py  axi.py  cli.py  lint_emit.py  run_dashboard.py  runguard.py  watch_chat.py
observer_kit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
observer_kit/assets/: dashboard.js
skills/observer-kit/: EXPLAIN.md  SKILL.md  example_worker.py  run_dashboard.py  runguard.py  test_cli.py  test_dashboard.py  test_dashboard_browser.py  test_data_movement.py  test_lint_emit.py  test_runguard.py  test_skill.py  watch_chat.py
skills/observer-kit/.runguard/: .gitignore
skills/observer-kit/agents/: openai.yaml
skills/observer-kit/assets/: dashboard.js
skills/observer-kit/hooks/: session-start-observer.sh
skills/observer-kit/references/: build-guide.md  lint_emit.py  pattern.md
tests/: test_axi.py  test_cli.py  test_dashboard.py  test_dashboard_browser.py  test_data_movement.py  test_flow_skill.py  test_lint_emit.py  test_runguard.py  test_secrets.py  test_skill.py  test_validate_flow.py
tests/import_shims/: runguard.py
