[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "observer-kit"
version = "0.1.0"
description = "Guardrails, ledgers, and a localhost dashboard for risky batch scripts"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "edsmkt" }]

[project.scripts]
observer-kit = "observer_kit.cli:main"

[tool.setuptools]
packages = ["observer_kit"]
