[metadata]
name = observer-kit
version = 0.1.0
description = Guardrails, ledgers, and a localhost dashboard for risky batch scripts
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = edsmkt

[options]
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    observer-kit = observer_kit.cli:main
