[metadata]
name = observer-kit
version = 0.2.0
description = Guardrails, ledgers, and a localhost dashboard for risky batch scripts
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = edsmkt

[options]
packages = find:
python_requires = >=3.9
include_package_data = True

[options.entry_points]
console_scripts =
    observer-kit = observer_kit.cli:main

[options.extras_require]
browser-test =
    playwright>=1.40,<2
